--- a/src/app/testPage/test-page.template.html
+++ b/src/app/testPage/test-page.template.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <div ng-include="'components/navbar/navbar.html'"></div>
+  <navbar></navbar>
 
   <div class="jumbotron text-center">
     <h1>'Allo, 'Allo!</h1>
