--- a/src/app/testPage/components/navbar/navbar.template.html
+++ b/src/app/testPage/components/navbar/navbar.template.html
@@ -14,7 +14,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li>Current date: {{ date | date:'yyyy-MM-dd' }}</li>
+        <li>Current date: {{$ctrl.date | date:'yyyy-MM-dd' }}</li>
       </ul>
     </div>
   </div>
